# cmd_console

./: CMakeLists.txt  README.md  package.xml  test2.py  test_cin.cpp  we_console.cpp
launch/: we_console.launch
scripts/: console  console.py
