<?xml version="1.0"?>
<package>
  <name>cmd_console</name>
  <version>1.0.0</version>
  <description>The cmd_console package</description>
  <maintainer email="chk0105@mail.ustc.edu.cn">Kai Chen</maintainer>
  <license>TODO</license>
  <author email="min@example.com">Min Cheng</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
